vsu/10.x/2.-vsu-you-hua-pei-zhi.md
# 2. VSU优化配置

**2、VSU优化配置**

**1、配置双主机检测及例外口\(基于BFD\)**

为什么要配置双主机检测？

1.当VSL的所有物理链路都异常断开时，从机箱认为主机箱丢失会切换成主机箱，网络中将出现两台主机箱，两台机箱的配置完全相同，在三层，两台机箱的任何一个虚接口（VLAN接口和环回接口等等）的配置相同，网络中将会出现IP地址冲突，导致网络不可用。

2.配置双主机检测机制后，BFD专用链路会根据双主机报文的收发检测出存在双主机箱，系统将根据双主机检测规则选择一台机箱\(低优先级机箱）进入恢复（recovery）模式，除VSL端口、MGMT口和管理员指定的例外端口（保留作为设备其他端口shutdown时可以Telnet）以外，其它端口都被强制关闭。

所以双主机检测可以阻止以上异常故障出现时，保障网络依然可用（前提是其他设备连接到双核心都具备冗余链路条件）

VSU配置：

Ruijie&gt;en

Ruijie\#config ter

Ruijie\(config\)\# interface gi2/4/2

Ruijie\(config-if\)\# no switchport ------&gt;配置检测接口 2 为路由口

Ruijie\(config-if\)\# exit

Ruijie\(config\)\# interface gi1/4/2

Ruijie\(config-if\)\# no switchport  ------&gt;配置检测接口 1 为路由口

Ruijie \(config-if\)\# exit

Ruijie \(config\)\# switch virtual domain 1 ------&gt;进入VSU参数配置

Ruijie\(config-vs-domain\)\# dual-active **detection bfd** ------&gt;打开 BFD 开关,缺省关闭

Ruijie\(config-vs-domain\)\# dual-active pair interface gi1/4/2 interface gi2/4/2   ------&gt;配置一对BFD 检测接口

Ruijie\(config-vs-domain\)\# dual-active exclude interface  ten1/1/2   ------&gt;指定例外口，上联路由口保留，出现双主机时可以telnet

Ruijie\(config-vs-domain\)\# dual-active exclude interface  ten2/1/2    ------&gt;指定例外口

 **2、配置双主机检测（基于聚合口检测）**

在多台VSU要完全防止双主机，最好的方式采用聚合检测，这样不用像BFD那样，需要多条BFD线路两两互联。聚合检测只需要n条线路即可。但是前提是下联的接入交换机是锐捷设备，这样保证锐捷的私有报文可以正常转发。

![](https://image.ruijie.com.cn/Upload/Article/ed2b5aeb-92a6-48e3-b1d1-0c2ed8aeece3/%E9%94%90%E6%8D%B7%E4%BA%A4%E6%8D%A2%E6%9C%BA%E4%BA%A7%E5%93%81%E5%AE%9E%E6%96%BD%E4%B8%80%E6%9C%AC%E9%80%9AV5.0/%E9%94%90%E6%8D%B7%E4%BA%A4%E6%8D%A2%E6%9C%BA%E4%BA%A7%E5%93%81%E5%AE%9E%E6%96%BD%E4%B8%80%E6%9C%AC%E9%80%9AV5.0/8e56d493-994e-4b07-a65f-11a0cae8b99a_files/b20210c7_3c82f551_0.png)

注意：如果需要使用MAD配置，必须接入交换机支持MAD功能，否则无法用MAD功能来进行双主机检测，

待VSU组建成功后，配置命令如下：

VSU交换机配置：

Ruijie\(config\)\# switch virtual domain 1

Ruijie\(config-vs-domain\)\# dual-active detection aggregateport

Ruijie\(config-vs-domain\)\# dual-active interface aggregatePort 1

Ruijie\(config-vs-domain\)\# exit

在接入交换机上配置：

Ruijie\(config\)\#interface aggregateport 1

Ruijie\(config-if-AggregatePort 1\)\# dad relay enable

Ruijie\(config-if-AggregatePort 1\)\# exit

**3、配置OSPF GR**

为什么要配置OSPF GR？

1. VSU/双引擎主备切换时，OSPF等动态路由协议邻居会重新建立，导致网络中断或数据流路径切换。

2. 配置GR（完美重启）功能后，GR能够保持邻居间的OSPF邻居关系不中断，管理面重启时数据面依然正常按照原有路径转发。

OSPF GR功能需要邻居设备支持并开启GR Helper（我司设备如支持GR Helper 则默认开启，无需配置），邻居不具备GR Helper功能时，VSU主从机异常切换时

OSPF邻居关系依然会中断，造成网络短暂中断。

VSU配置：

Ruijie\(config\)\#router ospf 1

Ruijie\(config-router\)\#**graceful-restart**   ------&gt;开启GR功能

邻居设备需要配置GR-helper功能（我司设备如支持GR-helper，则默认打开无需配置，所以无需进行配置）

如果OSPF邻居设备为友商产品，GR-helper配置方法需查看对应产品的配置手册确认。

例如H3C需要在OSPF进程下执行

opaque-capability enable

